--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -15,17 +15,10 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
-
-    <style name="TransparentAppTheme" parent="AppTheme">
-        <item name="colorPrimary">@color/actionBarColor</item>
-        <item name="actionBarStyle">@style/TransparentAppTheme.ActionBar</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
         <item name="windowActionBarOverlay">true</item>
-    </style>
-
-    <style name="TransparentAppTheme.ActionBar" parent="Widget.AppCompat.ActionBar.Solid">
-        <item name="backgroundSplit">@color/actionBarColor</item>
-        <item name="android:background">@color/actionBarColor</item>
     </style>
 
 </resources>
