--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,27 +1,34 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <item
         android:id="@+id/menu_add"
         android:orderInCategory="100"
         app:showAsAction="always"
         android:icon="@drawable/ic_action_add_layer"
-        android:title="@string/action_add">
+        android:title="@string/action_add"
+        >
 
         <menu>
             <item
                 android:id="@+id/menu_add_local"
-                android:title="@string/action_add_local"/>
+                android:title="@string/action_add_local"
+                />
             <item
                 android:id="@+id/menu_add_remote"
-                android:title="@string/action_add_remote"/>
+                android:title="@string/action_add_remote"
+                />
             <item
                 android:id="@+id/menu_add_ngw"
-                android:title="@string/action_add_ngw"/>
+                android:title="@string/action_add_ngw"
+                />
         </menu>
     </item>
 
-    <item android:id="@+id/menu_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        />
 </menu>
