--- a/app/src/main/res/xml/preference_headers.xml
+++ b/app/src/main/res/xml/preference_headers.xml
@@ -20,10 +20,18 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <color name="actionBarColor">#8003a9f4</color>
-    <color name="primary">#03a9f4</color>
-    <color name="primary_dark">#01579b</color>
-    <color name="accent">#03a9f4</color>
-    <!--indigo from http://www.google.co.uk/design/spec/style/color.html#color-color-palette -->
-</resources>
+<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
+    <header
+        android:fragment="com.nextgis.mobile.SettingsFragment"
+        android:title="@string/general"
+        android:summary="@string/general_summary">
+        <extra android:name="settings" android:value="general" />
+    </header>
+    <header
+        android:fragment="com.nextgis.mobile.SettingsFragment"
+        android:title="@string/map"
+        android:summary="@string/map_summary">
+        <extra android:name="settings" android:value="map" />
+    </header>
+
+</preference-headers>
