Fix settings activity

--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -20,18 +20,15 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:context=".SettingsActivity"
-              tools:actionBarNavMode="standard"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                   android:id="@+id/main_toolbar"
+                                   android:layout_height="wrap_content"
+                                   android:layout_width="match_parent"
+                                   android:minHeight="?attr/actionBarSize"
+                                   android:background="?attr/colorPrimary"
+                                   app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                                   app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     >
 
-    <include
-        layout="@layout/actionbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-</LinearLayout>
+</android.support.v7.widget.Toolbar>
