--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -52,4 +52,10 @@
         android:orderInCategory="100"
         app:showAsAction="never"
         />
+    <item
+        android:id="@+id/menu_about"
+        android:title="@string/action_about"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        />
 </menu>
