Add FAB menu buttons

--- a/app/src/main/res/layout-land/fragment_map.xml
+++ b/app/src/main/res/layout-land/fragment_map.xml
@@ -45,38 +45,35 @@
             fab:fab_addButtonColorNormal="@color/primary"
             fab:fab_addButtonColorPressed="@color/accent"
             fab:fab_addButtonPlusIconColor="@android:color/white"
-            fab:fab_labelStyle="@style/menu_labels_style"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginEnd="16dp">
+            android:layout_marginEnd="16dp"
+            fab:fab_expandDirection="left">
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/add_geometry_by_walk"
+                android:id="@+id/action_a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_colorNormal="@color/primary"
                 fab:fab_size="mini"
-                fab:fab_title="@string/add_geometry_by_walk"
                 fab:fab_icon="@drawable/ic_action_maps_directions_walk"
                 fab:fab_colorPressed="@color/accent"/>
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/add_new_geometry"
+                android:id="@+id/action_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_colorNormal="@color/primary"
                 fab:fab_size="mini"
-                fab:fab_title="@string/add_new_geometry"
                 fab:fab_icon="@drawable/ic_action_image_edit"
                 fab:fab_colorPressed="@color/accent"/>
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/add_point"
+                android:id="@+id/action_c"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_colorNormal="@color/primary"
                 fab:fab_size="mini"
-                fab:fab_title="@string/add_current_place"
                 fab:fab_icon="@drawable/ic_action_maps_place"
                 fab:fab_colorPressed="@color/accent"/>
 
