Fix layer reordering

--- a/app/src/main/res/xml/preferences_map.xml
+++ b/app/src/main/res/xml/preferences_map.xml
@@ -24,12 +24,12 @@
     <CheckBoxPreference
         android:key="keep_screen_on"
         android:title="@string/keep_screen_on"
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:summary="@string/keep_screen_on_summary" />
     <CheckBoxPreference
         android:key="show_zoom_controls"
         android:title="@string/show_zoom_controls"
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:summary="@string/show_zoom_controls_summary" />
 
 </PreferenceScreen>
