--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -23,8 +23,8 @@
 <sync-adapter
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:contentAuthority="com.nextgis.mobile.provider"
-    android:accountType="nextgis.com"
+    android:accountType="com.nextgis.account"
     android:userVisible="true"
     android:supportsUploading="true"
-    android:allowParallelSyncs="true"
+    android:allowParallelSyncs="false"
     android:isAlwaysSyncable="true"/>
