Add change layer values activity

--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -26,5 +26,5 @@
     android:accountType="com.nextgis.account"
     android:userVisible="true"
     android:supportsUploading="true"
-    android:allowParallelSyncs="false"
+    android:allowParallelSyncs="true"
     android:isAlwaysSyncable="true"/>
