--- a/app/src/main/res/layout-land/fragment_map.xml
+++ b/app/src/main/res/layout-land/fragment_map.xml
@@ -36,6 +36,7 @@
         >
 
         <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/action_add_current_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
