--- a/app/src/main/res/xml/preference_headers_legacy.xml
+++ b/app/src/main/res/xml/preference_headers_legacy.xml
@@ -21,14 +21,14 @@
   -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <Preference
+    <!--Preference
         android:title="@string/general"
         android:summary="@string/general_summary" >
         <intent
             android:targetPackage="com.nextgis.mobile"
             android:targetClass="com.nextgis.mobile.SettingsActivity"
             android:action="com.nextgis.mobile.PREFS_GENERAL" />
-    </Preference>
+    </Preference-->
     <Preference
         android:title="@string/map"
         android:summary="@string/map_summary" >
@@ -36,6 +36,22 @@
             android:targetPackage="com.nextgis.mobile"
             android:targetClass="com.nextgis.mobile.SettingsActivity"
             android:action="com.nextgis.mobile.PREFS_MAP" />
+    </Preference>
+    <Preference
+        android:title="@string/location"
+        android:summary="@string/location_summary" >
+        <intent
+            android:targetPackage="com.nextgis.mobile"
+            android:targetClass="com.nextgis.mobile.SettingsActivity"
+            android:action="com.nextgis.mobile.PREFS_LOCATION" />
+    </Preference>
+    <Preference
+        android:title="@string/tracks"
+        android:summary="@string/tracks_summary" >
+        <intent
+            android:targetPackage="com.nextgis.mobile"
+            android:targetClass="com.nextgis.mobile.SettingsActivity"
+            android:action="com.nextgis.mobile.PREFS_TRACKING" />
     </Preference>
     <Preference
         android:title="@string/ngw"
