--- a/app/src/main/res/xml/preferences_location.xml
+++ b/app/src/main/res/xml/preferences_location.xml
@@ -21,23 +21,15 @@
   -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <CheckBoxPreference
-        android:key="keep_screen_on"
-        android:title="@string/keep_screen_on"
-        android:defaultValue="false"
-        android:summary="@string/keep_screen_on_summary"
+    <ListPreference
+        android:key="location_source_str"
+        android:title="@string/pref_location_accuracy"
+        android:entryValues="@array/location_accuracy_val"
+        android:defaultValue="3"
         />
-    <CheckBoxPreference
-        android:key="show_zoom_controls"
-        android:title="@string/show_zoom_controls"
-        android:defaultValue="false"
-        android:summary="@string/show_zoom_controls_summary"
-        />
-    <!-- TODO:
-    1) Add checkbox show may location
-    2) Add list preference show coordinates format
-    3) Add checkbox show scale bar/zoom level
-    4) tile size
-    5) drawing canvas size in percent   -->
-
+    <!--TODO:
+    1) add accuracy,
+    2) CE,
+    3) time period and
+    4) minimal distance to pick location -->
 </PreferenceScreen>
