--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -23,8 +23,9 @@
 <sync-adapter
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:contentAuthority="com.nextgis.mobile.provider"
-    android:accountType="com.nextgis.account"
+    android:accountType="@string/gis_auth_account_type"
     android:userVisible="true"
     android:supportsUploading="true"
     android:allowParallelSyncs="true"
-    android:isAlwaysSyncable="true"/>
+    android:isAlwaysSyncable="true"
+    />
