Add tracks source, location min time/dist preferences

--- a/app/src/main/res/xml/preferences_tracks.xml
+++ b/app/src/main/res/xml/preferences_tracks.xml
@@ -21,6 +21,13 @@
   -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <ListPreference
+        android:key="tracks_location_source_str"
+        android:title="@string/pref_location_accuracy"
+        android:entryValues="@array/location_accuracy_val"
+        android:defaultValue="1"
+        />
+
     <EditTextPreference
         android:key="tracks_min_time"
         android:title="@string/pref_min_time"
