--- a/app/src/main/res/xml/preferences_location.xml
+++ b/app/src/main/res/xml/preferences_location.xml
@@ -27,6 +27,23 @@
         android:entryValues="@array/location_accuracy_val"
         android:defaultValue="3"
         />
+
+    <EditTextPreference
+        android:key="location_min_time"
+        android:title="@string/pref_min_time"
+        android:defaultValue="10"
+        android:inputType="number"
+        android:numeric="integer"
+        />
+
+    <EditTextPreference
+        android:key="location_min_distance"
+        android:title="@string/pref_min_distance"
+        android:defaultValue="2"
+        android:inputType="number|numberDecimal"
+        android:numeric="decimal"
+        />
+
     <!--TODO:
     1) add accuracy,
     2) CE,
