--- a/app/src/main/res/xml/preferences_map.xml
+++ b/app/src/main/res/xml/preferences_map.xml
@@ -41,10 +41,13 @@
         android:entries="@array/coordinates_format"
         android:entryValues="@array/coordinates_format_val"
         android:dialogTitle="@string/select_coordinates_format" />
-    <EditTextPreference
+    <com.nextgis.mobile.SelectMapPathDialogPreference
         android:key="map_path"
         android:title="@string/map_path"
-        android:summary="@string/map_path_summary"/>
+        android:summary="@string/map_path_summary"
+        android:dialogTitle ="@string/select_map_path"
+        android:positiveButtonText="@string/select"
+        android:negativeButtonText="@string/cancel"/>
 
     <!-- TODO:
     1) Add checkbox show my location
