--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -74,4 +74,10 @@
         app:showAsAction="never"
         android:icon="@drawable/ic_launcher"
         />
+
+    <item
+        android:id="@+id/menu_test"
+        android:title="test"
+        app:showAsAction="never"
+        />
 </menu>
