--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -75,9 +75,9 @@
         android:icon="@drawable/ic_launcher"
         />
 
-    <item
+    <!--item
         android:id="@+id/menu_test"
         android:title="test"
         app:showAsAction="never"
-        />
+        /-->
 </menu>
