--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,4 +49,21 @@
         <item name="android:textColor">@color/primary_text_default_material_light</item>
     </style>
 
+    <style name="status_panel">
+        <item name="android:textViewStyle">@style/status_panel_text</item>
+    </style>
+
+    <style name="status_panel_text" parent="android:Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:drawablePadding">2dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="status_panel_text_land" parent="status_panel_text">
+        <item name="android:singleLine">true</item>
+    </style>
+
 </resources>
