--- a/app/src/main/res/layout/status_panel.xml
+++ b/app/src/main/res/layout/status_panel.xml
@@ -69,24 +69,24 @@
             android:id="@+id/tv_accuracy"
             style="@style/status_panel_text"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_unfold_less_white_18dp"
-            android:drawableStart="@drawable/ic_unfold_less_white_18dp"
+            android:drawableLeft="@drawable/ic_accuracy"
+            android:drawableStart="@drawable/ic_accuracy"
             />
 
         <TextView
             android:id="@+id/tv_altitude"
             style="@style/status_panel_text"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_format_indent_increase_white_18dp"
-            android:drawableStart="@drawable/ic_format_indent_increase_white_18dp"
+            android:drawableLeft="@drawable/ic_altitude"
+            android:drawableStart="@drawable/ic_altitude"
             />
 
         <TextView
             android:id="@+id/tv_speed"
             style="@style/status_panel_text"
             android:layout_weight="2"
-            android:drawableLeft="@drawable/ic_av_timer_white_18dp"
-            android:drawableStart="@drawable/ic_av_timer_white_18dp"
+            android:drawableLeft="@drawable/ic_speed"
+            android:drawableStart="@drawable/ic_speed"
             />
     </LinearLayout>
 </LinearLayout>
