Current state om gis_app

--- a/app/src/main/res/layout-land/fragment_map.xml
+++ b/app/src/main/res/layout-land/fragment_map.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
-  ~ Authors:  Dmitry Baryshnikov aka Bishop (bishop.dev@gmail.com), Stanislav Petriakov
+  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
   ~ ******************************************************************************
   ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
   ~
