--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,9 +51,7 @@
         </FrameLayout>
 
         <include
-            layout="@layout/actionbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            layout="@layout/actionbar"/>
 
         <include
             layout="@layout/actionbar"
