Fix bottom toolbar height and status panel visibility

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             layout="@layout/actionbar"
             android:id="@+id/bottom_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:layout_gravity="bottom"
             android:visibility="gone"
 
