--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,12 +54,7 @@
             layout="@layout/actionbar"/>
 
         <include
-            layout="@layout/actionbar"
-            android:id="@+id/bottom_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_gravity="bottom"
-            android:visibility="gone"
+            layout="@layout/bottombar"
 
             />
     </FrameLayout>
